--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     implementation 'nl.dionsegijn:konfetti:1.1.3'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation ('com.squareup.retrofit2:retrofit:2.9.0')
+    implementation ('com.squareup.retrofit2:converter-gson:2.9.0')
     implementation ("com.fasterxml.jackson.core:jackson-databind:2.12.5")
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.xwray:groupie:2.1.0'
@@ -73,6 +73,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'com.google.android.material:material:1.3.0-beta01'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
